--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "icons": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.7.0",
     "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
